--- a/src/1-1-limit.tex
+++ b/src/1-1-limit.tex
@@ -1,4 +1,4 @@
-\documentclass[../calc1-main.tex]{subfiles}
+\documentclass[calc1-main.tex]{subfiles}
 
 \begin{document}
   Two main problems of calculus are
@@ -113,7 +113,7 @@
 \end{multicols}
 \end{enumerate}
 
-(a) $8$, (b) $6$, (c) DNE,
+(a) $8$, (b) $6$, (c) does not exist,
 (d) $-2$, (e) $-1$, (f) $8$,
 (g) $7$, (h) $6$, (i) $3$,
 (j) $-3/2$, (k) $6$, (l) $2$
