--- a/src/1-3-continuity.tex
+++ b/src/1-3-continuity.tex
@@ -1,4 +1,4 @@
-\documentclass[../calc1-main.tex]{subfiles}
+\documentclass[calc1-main.tex]{subfiles}
 
 \begin{document}
 	Let $f(x) = \sqrt{4 - x^2}$. Domain of $f$ is $[-2, 2]$.
@@ -82,8 +82,8 @@ According to this definition $f(x) = \frac{1}{x}$ is also continuous!!! $0$ is n
 	\begin{itemize}
 		\item $f + g$, $f - g$, $f g$, are continuous at $c$,
 		\item if $k$ is constant then $k f$ is continuous at $c$,
-		\item $\dfrac{f}{g}$ continuous at $c$ provided that $g(c) \neq 0$.
-		\item $f(x)^{1/n}$ continuous at c provided that $f(c)>0$ if $n$ is even.
+		\item $\dfrac{f}{g}$ is continuous at $c$ provided that $g(c) \neq 0$.
+		\item $f^{1/n}$ continuous at c provided that $f(c)>0$ if $n$ is even.
 	\end{itemize}
 \end{theorem}
 
