--- a/src/1-4-formal.tex
+++ b/src/1-4-formal.tex
@@ -1,4 +1,4 @@
-\documentclass[../calc1-main.tex]{subfiles}
+\documentclass[calc1-main.tex]{subfiles}
 
 \begin{document}
 The informal description of the limit uses phrases like ``close enough'' and ``really very small''.
