--- a/src/1-5-limit-review.tex
+++ b/src/1-5-limit-review.tex
@@ -1,4 +1,4 @@
-\documentclass[../calc1-main.tex]{subfiles}
+\documentclass[calc1-main.tex]{subfiles}
 
 \begin{document}
 
@@ -24,6 +24,33 @@
       \]
     \end{solution}
     \item $\lim_{x \to 0} \dfrac{x}{\abs{x-1}-\abs{x+1}}$.
+    \item $\displaystyle \lim_{x \to 5} \frac{x-5}{x^2-25}$
+    \item $\displaystyle \lim_{x \to -5} \frac{x^2+3x-10}{x+5}$
+    \item $\displaystyle \lim_{x \to 1} \frac{x^{-1}-1}{x-1}$
+    \item $\displaystyle \lim_{u \to 1} \frac{u^4-1}{u^3-1}$
+    \item $\displaystyle \lim_{x \to 9} \frac{\sqrt{x}-3}{x-9}$
+    \item $\displaystyle \lim_{x \to 0} \frac{\frac{1}{x-1}+\frac{1}{x+1}}{x}$
+    \item $\displaystyle \lim_{v \to 2} \frac{v^3-8}{v^4-16}$
+    \item If $2-x^2 \le g(x) \le 2 \cos x$, for all $x$, find $\lim_{x \to 0} g(x)$
+    \item If $\displaystyle \lim_{x \to 2} \frac{f(x)-5}{x-2} = 3$, find $\lim_{x \to 2} f(x)$
+    \item If $\displaystyle \lim_{x \to 2} \frac{f(x)-5}{x-2} = 4$, find $\lim_{x \to 2} f(x)$
+    \item $\displaystyle \lim_{h \to 0+} \frac{\sqrt{h^2+4h+5}-\sqrt{5}}{h}$
+    \item $\displaystyle \lim_{x \to -2-} (x+3) \frac{\abs{x+2}}{x+2}$
+    \item Define $g(3)$ in a way that extends $g(x) = (x^2-9)/(x-3)$ to be a continuous at $x=3$.
+    \item For what value of $b$ is
+    \[
+       g(x) =
+       \begin{cases}
+         ax+2b, & x \le 0 \\
+         x^2+3a-b, & 0<x \le 2 \\
+         3x-5, & x>2
+       \end{cases}
+    \]
+    continuous at every $x$?
+    \item Explain why the equation $\cos x = x$ has at least one solution.
+    \item If $f(x) = x^3 - 8x + 10$, show that there is a value $c$ for which $f(c)=1000$.
+    \item Suppose that a function $f$ is continuous on the closed interval $[0, 1]$ and that $0\le f(x) \le 1$ for every $x$ in $[0,1]$. Show that there must exist a number $c$ in $[0,1]$ such that $f(c)=c$ (c is called a fixed point of $f$). (Hint: Consider the function $g(x) = f(x) - x)$ and try to find a zero of $g(x)$.
+    \item Show that the function $F(x) = (x-a)^2(x-b)^2 + x$ takes on the value $(a+b)/2$ for some value of $x$.
   \end{enumerate}
 \end{example}
 
