--- a/src/2-5-trig.tex
+++ b/src/2-5-trig.tex
@@ -1,4 +1,4 @@
-\documentclass[../calc1-main.tex]{subfiles}
+\documentclass[calc1-main.tex]{subfiles}
 
 \begin{document}
 
@@ -151,5 +151,9 @@
     Find the points on the curve $y=\tan(2x)$, $-\pi/4 < x < \pi/4$, where the normal is parallel to the line $y=-x/8$.
   \end{example}
 
-
+\subsection*{Exercises}
+\begin{enumerate}
+  \item $\displaystyle \lim_{x \to \infty} \frac{\sin x}{x}$. (Hint: Use Sandwich Theorem)
+  \item $\displaystyle \lim_{t \to \infty} \frac{2-t+\sin t}{t+\cos t}$ (Hint: Divide both sides by $t$ and use the previous exercise)
+\end{enumerate}
 \end{document}
