--- a/src/5-3-substitution.tex
+++ b/src/5-3-substitution.tex
@@ -1,11 +1,11 @@
-\documentclass[../calc1-main.tex]{subfiles}
+\documentclass[calc1-main.tex]{subfiles}
 
 \begin{document}
 
 The following should be memorized.
 
 \begin{minipage}{0.5\textwidth}
-  \begin{enumerate}
+  \begin{itemize}
     \item $\displaystyle \int x^n dx = \frac{1}{n+1} x^{n+1} + C$, if $n\neq 1$
     \item $\displaystyle \int 1 dx = x + C$
     \item $\displaystyle \int x dx = \frac{1}{2}x^2 + C$
@@ -14,11 +14,10 @@ The following should be memorized.
     \item $\displaystyle \int \frac{1}{x} dx = \ln\abs{x} + C$
     \item $\displaystyle \int \sin x dx = -\cos x + C$
     \item $\displaystyle \int \cos x dx = \sin x + C$
-  \end{enumerate}
+  \end{itemize}
 \end{minipage}%
 \begin{minipage}{0.5\textwidth}
-  \setcounter{enumi}{8}
-  \begin{enumerate}
+  \begin{itemize}
     \item $\displaystyle \int \sec^2 x dx = \tan x + C$
     \item $\displaystyle \int \csc^2 x dx = -\cot x + C$
     \item $\displaystyle \int \sec x \tan x dx = \sec x + C$
@@ -27,7 +26,7 @@ The following should be memorized.
     \item $\displaystyle \int \frac{1}{1+x^2} dx = \arctan x + C$
     \item $\displaystyle \int e^{x} dx = e^x + C$
     \item $\displaystyle \int a^x dx = \frac{1}{\ln a} a^x + C$
-  \end{enumerate}
+  \end{itemize}
 \end{minipage}
 
 \begin{example}
