--- a/src/5-4-areas.tex
+++ b/src/5-4-areas.tex
@@ -1,4 +1,4 @@
-\documentclass[../calc1-main.tex]{subfiles}
+\documentclass[calc1-main.tex]{subfiles}
 
 \begin{document}
 \begin{example}
@@ -30,7 +30,7 @@
 
     The area is
     \[
-      \int_{-2}^2 \frac{5}{x^2+1} dx - \int_{-2}^2 1 dx = 5 \tan^{-1}x \mid_0^2 - 4 = 10\tan^.
+      \int_{-2}^2 \frac{5}{x^2+1} dx - \int_{-2}^2 1 dx = 10 \arctan 2 - 4.
     \]
   \end{solution}
 \end{minipage}%
