--- a/src/P-3-quadratics.tex
+++ b/src/P-3-quadratics.tex
@@ -1,4 +1,4 @@
-\documentclass[../calc1-main.tex]{subfiles}
+\documentclass[calc1-main.tex]{subfiles}
 
 \begin{document}
 \subsection*{Circles and Disks}
