--- a/src/P-4-functions.tex
+++ b/src/P-4-functions.tex
@@ -1,4 +1,4 @@
-\documentclass[../calc1-main.tex]{subfiles}
+\documentclass[calc1-main.tex]{subfiles}
 
 \begin{document}
   A \textbf{function} $f$ on a set $D$ (called the \textbf{domain}) into a set $R$ (called the target or codomain) is a rule that assigns a unique element $f(x)$ in $R$ to \textit{each} element $x$ in $D$.
