--- a/src/2-1-tangent.tex
+++ b/src/2-1-tangent.tex
@@ -1,4 +1,4 @@
-\documentclass[../calc1-main.tex]{subfiles}
+\documentclass[calc1-main.tex]{subfiles}
 
 \begin{document}
   \textbf{Problem:} Find a straight line $L$ that is tangent to a curve $C$ at a point $P$.
