--- a/src/2-8-meanValueTheorem.tex
+++ b/src/2-8-meanValueTheorem.tex
@@ -1,4 +1,4 @@
-\documentclass[../calc1-main.tex]{subfiles}
+\documentclass[calc1-main.tex]{subfiles}
 \begin{document}
 \begin{quotation}
   The Mean Value Theorem is the midwife of calculus - not very important or glamorous by itself, but often helping to deliver other theorems that are of major significance.\\ – E. Purcell and D. Varberg
