--- a/src/3-1-inverse.tex
+++ b/src/3-1-inverse.tex
@@ -1,4 +1,4 @@
-\documentclass[../calc1-main.tex]{subfiles}
+\documentclass[calc1-main.tex]{subfiles}
 \usetikzlibrary{calc,trees,positioning,arrows,fit,shapes,calc}
 
 \begin{document}
@@ -127,20 +127,16 @@ For example, if $y=x^2, x\ge 0$, then $x=\sqrt{y}$ and $\frac{dy}{dx} = 2x$ and 
 \end{example}
 \begin{solution}
   First $f'(x) = 3x^2 + 1 >0$. Hence $f$ is 1-1.
-  Let $y = f^{-1}(x)$.
+  Let $y = f^{-1}(x)$. Then $f(y) = x$, that is
   \[
-    (f^{-1})'(x) = \frac{1}{3 y^2 + 1} = \frac{1}{3 (f^{-1}(x))^2 + 1}.
+    y^3+y = x
   \]
+  Take $\frac{d}{dx}$ of both sides to get
   \[
-    (f^{-1})'(10) = \frac{1}{3 (f^{-1}(10))^2 + 1}.
+    3 y^2 y' + y' = 1 \implies y' = (f^{-1})'(x) = \frac{1}{3y^2 + 1}
   \]
-  \[
-    y = f^{-1}(10) \implies f(y) = 10 \implies y = 2 \implies f^{-1}(10) = 2.
-  \]
-  Thus
-  \[
-    (f^{-1})'(10) = \frac{1}{3\times2^2 + 1} = \frac{1}{13}.
-  \]
+  Now if $y=f^{-1}(10)$ then $y^3+y = 10$ and $y=2$.
+  So $(f^{-1})'(10) = \frac{1}{13}.$
 \end{solution}
 
 \begin{example}
