--- a/src/P-0-sets.tex
+++ b/src/P-0-sets.tex
@@ -1,4 +1,4 @@
-\documentclass[../calc1-main.tex]{subfiles}
+\documentclass[calc1-main.tex]{subfiles}
 
 \begin{document}
 A \textbf{set} is a collection of elements.
